--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^2.0.11",
     "@quasar/extras": "^1.16.4",
+    "apexcharts": "^4.1.0",
+    "axios": "^1.2.1",
+    "chart.js": "^4.4.7",
+    "dexie": "^4.0.10",
+    "firebase": "^11.0.2",
+    "pinia": "^2.0.11",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.5.0",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.9.0",
