--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules
 
 # Quasar core related directories
 .quasar
+dist/pwa
 /quasar.config.*.temporary.compiled*
 
 # Cordova related directories and files
